cargo_check_output.txt
    Checking p2d v0.1.0 (C:\Users\akagifreeez\Desktop\light Discord by p2d\p2d\src-tauri)
warning: unused imports: `Deserialize` and `Serialize`
 --> src\database.rs:4:13
  |
4 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `AppHandle` and `Manager`
 --> src\database.rs:7:13
  |
7 | use tauri::{AppHandle, Manager, State};
  |             ^^^^^^^^^  ^^^^^^^

error[E0599]: no method named `try_state` found for reference `&AppHandle` in the current scope
   --> src\gateway.rs:103:62
    |
103 | ...                   if let Some(db_state) = app.try_state::<crate::database::DatabaseState>() {
    |                                                   ^^^^^^^^^
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Manager` which provides `try_state` is implemented but not in scope; perhaps you want to import it
    |
  1 + use tauri::Manager;
    |
help: there is a method `state` with a similar name
    |
103 -                                  if let Some(db_state) = app.try_state::<crate::database::DatabaseState>() {
103 +                                  if let Some(db_state) = app.state::<crate::database::DatabaseState>() {
    |

error[E0308]: `if` and `else` have incompatible types
   --> src\database.rs:142:9
    |
129 |         let rows = if let Some(before) = &before_id {
    |  __________________-
130 | |           stmt.query_map(params![channel_id, before, limit], |row| {
    | |           -                                                  ----- the expected closure
    | |  _________|
    | | |
131 | | |             Ok((
132 | | |                 row.get::<_, String>(0)?,
133 | | |                 row.get::<_, String>(1)?,
...   | |
139 | | |             ))
140 | | |         }).map_err(|e| e.to_string())?
    | | |______________________________________- expected because of this
141 | |       } else {
142 | | /         stmt.query_map(params![channel_id, limit], |row| {
143 | | |             Ok((
144 | | |                 row.get::<_, String>(0)?,
145 | | |                 row.get::<_, String>(1)?,
...   | |
151 | | |             ))
152 | | |         }).map_err(|e| e.to_string())?
    | | |______________________________________^ expected closure, found a different closure
153 | |       };
    | |_______- `if` and `else` have incompatible types
    |
    = note: expected struct `MappedRows<'_, {closure@src\database.rs:130:60: 130:65}>`
               found struct `MappedRows<'_, {closure@src\database.rs:142:52: 142:57}>`
    = note: no two closures, even if identical, have the same type
    = help: consider boxing your closure and/or using it as a trait object

error[E0282]: type annotations needed
   --> src\database.rs:157:91
    |
157 |         let (id, channel_id, content, author, timestamp, embeds_json, attachments_json) = row.map_err(|e| e.to_string())?;
    |                                                                                           ^^^ cannot infer type

error[E0282]: type annotations needed
   --> src\database.rs:157:104
    |
157 |         let (id, channel_id, content, author, timestamp, embeds_json, attachments_json) = row.map_err(|e| e.to_string())?;
    |                                                                                                        ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
157 |         let (id, channel_id, content, author, timestamp, embeds_json, attachments_json) = row.map_err(|e: /* Type */| e.to_string())?;
    |                                                                                                         ++++++++++++

Some errors have detailed explanations: E0282, E0308, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `p2d` (lib) generated 2 warnings
error: could not compile `p2d` (lib) due to 4 previous errors; 2 warnings emitted
